# ElectroDesk-service

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/backend/: database.py
src/backend/api/dependencies/: auth_dependency.py  product_dependency.py  role_dependency.py
src/backend/api/v1/: auth_router.py  product_router.py  router.py
src/backend/api/v2/: router.py
src/backend/core/: config.py  constants.py  enums.py  logger.py
src/backend/database/: database.py  init_db.py
src/backend/interface/: product_repo_interface.py  user_repo_interface.py
src/backend/models/: products.py  user.py
src/backend/repositeries/: database_product_repositary.py  database_user_repositary.py  product_repo.py  user_repo.py
src/backend/scheduler/: keep_alive.py
src/backend/schemas/: auth_schema.py  product_schema.py
src/backend/services/: auth_service.py  product_service.py
src/backend/utilis/: jwt_helper.py
